Improve gke-oke check

--- a/action.yml
+++ b/action.yml
@@ -47,26 +47,54 @@ inputs:
 runs:
   using: "composite"
   steps:
-  - id: check_has_gke
+  - id: check_has_gke_or_oci
     shell: bash
     run: |
       if [ -z "${{ inputs.GKE_CLUSTER }}" ]; then
         echo "NO GKE CLUSTER"
-        echo "::set-output name=has_gke::false"
+        if [ -z "${{ inputs.OKE_CLUSTER }}" ]; then
+          echo "NO GKE AND NO OKE CLUSTER"
+          echo "::error title=Missing Cluster::No OKE or GKE Cluster informed"
+          exit 1
+        else
+          echo "NO GKE CLUSTER AND OKE CLUSTER AVAILABLE"
+          if [ -z "${{ inputs.OKE_CLUSTER_LOCATION }}" ]; then
+            echo "NO OKE CLUSTER LOCATION"
+            echo "::error title=Missing OKE Cluster Location::No OKE Cluster Location informed"
+            exit 2
+          else
+            echo "OKE CLUSTER LOCATION AVAILABLE"
+            echo "::set-output name=has_gke::false"
+          fi
+        fi
       else
         echo "GKE CLUSTER AVAILABLE"
-        echo "::set-output name=has_gke::true"
+        if [ -z "${{ inputs.OKE_CLUSTER }}" ]; then
+          echo "NO OKE CLUSTER AND GKE CLUSTER AVAILABLE"
+          if [ -z "${{ inputs.GKE_CLUSTER_LOCATION }}" ]; then
+            echo "NO GKE CLUSTER LOCATION"
+            echo "::error title=Missing GKE Cluster Location::No GKE Cluster Location informed"
+            exit 2
+          else
+            echo "GKE CLUSTER LOCATION AVAILABLE"
+            echo "::set-output name=has_gke::true"
+          fi
+        else
+          echo "GKE AND OKE CLUSTER AVAILABLE"
+          echo "::error title=Too many Clusters::Both OKE and GKE Cluster informed"
+          exit 3
+        fi
       fi
 
   - name: Set up GKE credentials
-    if: ${{ steps.check_has_gke.outputs.has_gke }} == "true"
+    if: ${{ steps.check_has_gke_or_oci.outputs.has_gke }} == "true"
     uses: google-github-actions/get-gke-credentials@v0
     with:
       cluster_name: ${{ inputs.GKE_CLUSTER }}
       location: ${{ inputs.GKE_CLUSTER_LOCATION }}
 
   - name: Set up OKE credentials
-    if: ${{ inputs.OKE_CLUSTER }} != "" && ${{ inputs.GKE_CLUSTER_LOCATION }} != ""
+    if: ${{ steps.check_has_gke_or_oci.outputs.has_gke }} == "false"
     shell: bash
     run: |
       /home/runner/bin/oci ce cluster create-kubeconfig --cluster-id ${{ inputs.OKE_CLUSTER }} \
