--- a/action.yml
+++ b/action.yml
@@ -86,20 +86,12 @@ runs:
         fi
       fi
 
-# Could be used if conditionals worked or continue-on-error
-#  - name: Set up GKE credentials
-#    uses: google-github-actions/get-gke-credentials@v0
-#    with:
-#      cluster_name: ${{ inputs.GKE_CLUSTER }}
-#      location: ${{ inputs.GKE_CLUSTER_LOCATION }}
   - name: Set up GKE credentials
-    shell: bash
-    run: |
-      if [ '${{ steps.check_has_gke_or_oci.outputs.has_gke }}' == "true" ]; then
-        gcloud container clusters get-credentials '${{ inputs.GKE_CLUSTER }}' \
-            --region '${{ inputs.GKE_CLUSTER_LOCATION }}'
-        export KUBECONFIG=$HOME/.kube/config
-      fi
+    if: inputs.GKE_CLUSTER != "" && inputs.GKE_CLUSTER_LOCATION != ""
+    uses: google-github-actions/get-gke-credentials@v0
+    with:
+      cluster_name: ${{ inputs.GKE_CLUSTER }}
+      location: ${{ inputs.GKE_CLUSTER_LOCATION }}
 
   - name: Set up OKE credentials
     shell: bash
